Biotech Crafting Station

--- a/src/main/resources/assets/biomechanica/lang/en_us.json
+++ b/src/main/resources/assets/biomechanica/lang/en_us.json
@@ -1,3 +1,4 @@
 {
+  "blockentity.biomechanica.biotech_crafting_station": "Biotech Crafting Station",
   "death.attack.bio_virus": "%1$s had their body melted away"
 }
